grammar.js
    module: ($) => seq(optional($.version_declaration), choice($.main_module, $.library_module)), // 1
    version_declaration: ($) => seq('xquery', choice(seq('encoding', $.string_literal), seq('version', $.string_literal, optional(seq('encoding', $.string_literal)))), ';'), // 2
    library_module: ($) => seq($.module_declaration, $.prolog), // 4
    main_module: ($) => seq(optional($.prolog), $.query_body), // 3
    prolog: ($) => prec.right(choice(seq($._prolog_part_one, optional($._prolog_part_two)), seq(optional($._prolog_part_one), $._prolog_part_two))), // 6
    module_declaration: ($) => seq('module', $._namespace_define, field('uri', $.string_literal), ';'), // 5
    _namespace_define: ($) => seq('namespace', $._ncname, '='), // repeated seq
    _prolog_part_one: ($) => repeat1(seq(choice($.default_namespace_declaration, $._setter, $.namespace_declaration, $.module_import, $.schema_import), ';')), // 6
    _prolog_part_two: ($) => repeat1(seq(choice($.context_item_declaration, $.variable_declaration, $.function_declaration, $.option_declaration), ';')), // 6
    // separator: ';'  // 7
    function_declaration: ($) =>
      seq(
        'declare',
        repeat($.annotation),
        'function',
        $._EQName,
        '(',
        optional($.param_list),
        ')',
        optional(field('return_type', $.type_declaration)),
        field('body', choice($.enclosed_expr, 'external'))
      ), // 32
    param_list: ($) => seq($._param, repeat(seq(',', $._param))), // 33
    _param: ($) => seq('$', $._EQName, optional(field('param_type', $.type_declaration))), // 34
    query_body: ($) => $._expr, // 38
    _expr: ($) => prec(1, seq($._expr_single, repeat(seq(',', $._expr_single)))), // 39
    _expr_single: ($) =>
      choice(
        $.flwor_expr, // 41          prec: 2
        $.quantified_expr, // 70     prec: 2
        $.switch_expr, // 71         prec: 2
        $.typeswitch_expr, //74      prec: 2
        $.if_expr, // 77             prec: 2
        $.try_catch_expr, // 78      prec: 2
        $.or_expr, // 83             prec: 3
        $.and_expr, // 84            prec: 4
        $.comparison_expr, // 85     prec: 5
        $.string_concat_expr, // 86  prec: 6
        $.range_expr, // 87          prec: 7
        $.additive_expr, // 88       prec: 8
        $.multiplicative_expr, // 89 prec: 9
        $.union_expr, // 90          prec: 10
        $.intersect_except_expr, //91 prec: 11
        $.instance_of_expr, // 92    prec: 12
        $.treat_expr, // 93          prec: 13
        $.castable_expr, // 94       prec: 14
        $.cast_expr, // 95           prec: 15
        $.arrow_expr, // 96          prec: 16
        $.unary_expr, //  97         prec: 17 '-' '+' arithmetic prefix right to left */
        $.bang_expr, //107           prec: 18
        seq($._postfix_expr, optional($.absolute_path_expr)),
        $.absolute_path_expr,
        $.rel_path_expr,
        $._primary_expr
        //$.qname
      ),
    flwor_expr: ($) => prec(2, seq($._initial_clause, repeat($._intermediate_clause), $.return_clause)), // 41
    _initial_clause: ($) => choice($.for_clause, $.let_clause, $._window_clause), // 42
    _intermediate_clause: ($) => choice($._initial_clause, $.where_clause, $.group_by_clause, $.order_by_clause, $.count_clause), // 43',
    for_clause: ($) => seq('for', $.for_binding, repeat(seq(',', $.for_binding))), // 44',
    for_binding: ($) =>
      seq('$', $._EQName, optional($.type_declaration), optional(seq('allowing', 'empty')), optional($._positional_var), 'in', field('binding_sequence', $._expr_single)), // 45
    let_clause: ($) => seq('let', $.let_binding, repeat(seq(',', $.let_binding))), // 48
    let_binding: ($) => seq('$', $._EQName, optional($.type_declaration), ':=', $._expr_single), // 49
    _positional_var: ($) => seq('at', field('positional_variable', $.variable)),
    count_clause: ($) => seq('count', $.variable), //   59
    where_clause: ($) => seq('where', $._expr_single), // 60
    group_by_clause: ($) => seq('group', 'by', $.grouping_spec, repeat(seq(',', $.grouping_spec))), // 61
    grouping_spec: ($) =>
      seq(field('grouping_var', $.variable), optional(seq(optional($.type_declaration), ':=', $._expr_single)), optional(seq('collation', field('uri', $.string_literal)))), // 63
    order_by_clause: ($) => prec.left(seq(optional('stable'), 'order', 'by', $._order_spec_list)), // 65
    _order_spec_list: ($) => seq($._order_spec, repeat(seq(',', $._order_spec))), // 66
    order_direction: ($) => seq(choice('ascending', 'descending')),
    return_clause: ($) => seq('return', $._expr_single), // 69
    // end flwor
    typeswitch_expr: ($) =>
      prec(2, seq('typeswitch', field('operand', seq('(', $._expr, ')')), repeat1($.typeswitch_case_clause), seq('default', optional($.variable), 'return', $._expr_single))), // 74
    typeswitch_case_clause: ($) => seq('case', optional(seq($.variable, 'as')), $.sequence_type, repeat(seq('|', $.sequence_type)), 'return', $._expr_single), // 75
    if_expr: ($) => prec(2, seq('if', field('if_test', seq('(', $._expr, ')')), 'then', field('if_consequence', $._expr_single), 'else', field('if_alternative', $._expr_single))), // 77
    comparison_expr: ($) => prec.left(5, seq(field('lhs', $._expr_single), $._comparison_ops, field('rhs', $._expr_single))), // 85
    _comparison_ops: ($) => choice($._value_comp, $._general_comp, $._node_comp),
    additive_expr: ($) => prec.left(8, seq(field('lhs', $._expr_single), repeat1(seq(choice('+', '-'), field('rhs', $._expr_single))))), //88
    multiplicative_expr: ($) => prec.left(9, seq(field('lhs', $._expr_single), repeat1(seq(choice('*', 'div', 'idiv', 'mod'), field('rhs', $._expr_single))))),
    instance_of_expr: ($) => prec.left(12, seq(field('lhs', $._expr_single), 'instance', 'of', field('rhs', $.sequence_type))), // 92
    treat_expr: ($) => prec(13, seq(field('lhs', $._expr_single), 'treat', 'as', field('rhs', $.sequence_type))), // 93
    castable_expr: ($) => prec(14, seq(field('lhs', $._expr_single), 'castable', 'as', field('simple_type', seq($._EQName, optional(token.immediate('?')))))), // 94
    cast_expr: ($) => prec(14, seq(field('lhs', $._expr_single), 'cast', 'as', field('simple_type', seq($._EQName, optional(token.immediate('?')))))), // 94
    bang_expr: ($) => prec.left(18, seq(field('sequence', $._expr_single), repeat1(seq('!', field('dynamic_context', $._expr_single))))), // 107
    predicate: ($) => prec.left(20, seq('[', $._expr_single, ']')), // 124
    postfix_lookup: ($) => prec.left(20, seq('?', field('key', choice($._ncname, $.integer_literal, $.parenthesized_expr, alias('*', $.wildcard))))),
    // A path expression that starts with "/" or "//"is often referred to as an absolute path expression
    rel_path_expr: ($) => prec.left(19, seq($._step_expr, repeat(seq(choice('/', '//'), $._step_expr)))),
    _step_expr: ($) => prec.left(19, seq(choice($._postfix_expr, $._axis_step))),
    abbrev_forward_step: ($) => prec.right(seq(optional('@'), $._node_test)),
    _node_test: ($) => choice($.name_test, $._kind_test), // 118
    name_test: ($) => choice($._EQName, $.wildcard), //  199
    wildcard: ($) => choice('*', seq($._ncname, ':*'), seq('*:', $._ncname), seq($.braced_uri_literal, '*')), // 120
    direct_constructor: ($) => choice($.direct_element, $.direct_comment), //141
    direct_comment: ($) => seq('<!--', repeat(/[^->]|[^-]>|[^-]->/), '-->'), // 149
    // 1 '[^->] any symbol except reserved
    //'2 [^-]> allow > when not a comment end
    // 3 [^-]->  allow - when not a comment comment end
    // 4 -[^>]   allow - when not followes by >
    // TODO
    direct_element: ($) => choice(seq($.start_tag, repeat($._direct_element_content), $.end_tag), $.empty_tag),
    _direct_element_content: ($) => choice($.direct_constructor, $._common_content, $._element_content_char),
    start_tag: ($) => seq('<', $._allowed_qnames, repeat($.direct_attribute), '>'),
    end_tag: ($) => seq('</', $._allowed_qnames, '>'),
    escape_enclosed: ($) => field('content', choice('{{', '}}')),
    comp_doc_constructor: ($) => seq('document', field('content', $.enclosed_expr)), // 156
    comp_elem_constructor: ($) => prec.left(2, seq('element', $._construct)), //157
    comp_attr_constructor: ($) => prec.left(2, seq('attribute', $._construct)), //158
    _construct: ($) => seq(choice($._EQName, seq('{', $._expr, '}')), field('content', $.enclosed_expr)),
    comp_text_constructor: ($) => seq('text', field('content', $.enclosed_expr)),
    comp_comment_constructor: ($) => seq('comment', field('content', $.enclosed_expr)),
    var_ref: ($) => seq('$', $._var_name), // 131
    parenthesized_expr: ($) => seq('(', optional($._expr), ')'), // 133
    function_call: ($) => seq($._EQName, $.arg_list), // grammar-note: parens  lookahead comment pragma
    arg_list: ($) => seq('(', optional(seq($._argument, repeat(seq(',', $._argument)))), ')'), // 122
    _argument: ($) => field('arg', choice($._expr_single, $.placeholder)),
    unary_lookup: ($) => prec.left(21, seq('?', field('key', choice($._ncname, $.integer_literal, $.parenthesized_expr, alias('*', $.wildcard))))), // 181
    type_declaration: ($) => seq('as', $.sequence_type), // 183
    sequence_type: ($) => choice(seq('empty-sequence', '(', ')'), prec.right(seq($._item_type, optional($.occurrence_indicator)))), // 184
    _item_type: ($) =>
      choice(
        $._kind_test,
        $.any_item,
        $._func_test, // maps arrays are functions
        $.atomic_or_union_type,
        $.parenthesized_item_type // 216
      ), // 186
    atomic_or_union_type: ($) => $._EQName, // 187
    text_test: ($) => seq('text', token.immediate('('), ')'), // 191
    element_test: ($) => seq('element', seq('(', optional($.element_test_params), ')')), // 199
    element_test_params: ($) =>
      seq(field('name', choice(alias('*', $.wildcard), $._EQName)), optional(seq(',', field('type', seq($._EQName, optional(alias('?', $.occurrence_indicator))))))),
    // same as element but no nilled test as attributes don't have children
    enclosed_expr: ($) => seq('{', optional($._expr), '}'), // 5
    map_constructor: ($) => prec.left(2, seq('map', seq('{', optional($.map_entry), repeat(seq(',', $.map_entry)), '}'))), //170
    map_entry: ($) => seq(field('key', $._expr_single), ':', field('value', $._expr_single)),
    curly_array_constructor: ($) => seq('array', field('content', $.enclosed_expr)),
    square_array_constructor: ($) => seq('[', optional($._expr_single), repeat(seq(',', $._expr_single)), ']'),
    string_constructor: ($) => seq('``[', $.string_constructor_chars, repeat(seq($.interpolation, $.string_constructor_chars)), ']``'), // 177
    string_constructor_chars: ($) => repeat1(/[^`{\]]|[\]][^`]|[\]]`[^`]|[^`][{]|[{][`{\]]|`[^{]/),
    // 1  [^`{\]] // any symbol except reserved
    // 2 [\]][^`] allow closing ] which is not a constuctor end
    // 3 [\]]`[^`] allow closing seq ]` without second ` which is not a constuctor end
    // 4 [^`][{] allow { if not opening interpolation seq
    // 5 [{][`{\]] allow standalone { or {` or {{ or {[ which is not a interpolation start
    // 6 `[^{] allow standalone ` which is not a interpolation start
    interpolation: ($) => seq('`{', $._expr, '}`'), // 180',
    string_literal: ($) => choice($._string_quote, $._string_apos),
    _string_quote: ($) => seq('"', repeat($._string_quote_content), '"'),
    _string_apos: ($) => seq("'", repeat($._string_apos_content), "'"),
    predefined_entity_ref: ($) => /&(lt|gt|amp|quot|apos);/,
    char_ref: ($) => /&#[0-9]+;|&#x[0-9a-fA-F]+;/,
    integer_literal: ($) => /\d+/,
    variable: ($) => seq('$', $._var_name),
    _var_name: ($) => $._EQName,
    _EQName: ($) => choice($._allowed_qnames, $.uri_qualified_name),
    //_QName: ($) => choice(field('unprefixed', $.identifier), seq(field('prefix', $.identifier), token.immediate(':'), field('local', $.identifier))),
    //_allowed_qnames: $  => prec.right(seq( $._ncname, optional(seq(':', $._ncname)))),
    _allowed_qnames: ($) => choice(field('ncname', $._ncname), seq(field('prefixed', $._ncname), token.immediate(':'), field('local', $._ncname))),
    _ncname: ($) => choice($.identifier, alias($._non_delimiting_word, $.identifier)),
    char_data: ($) => /[^\p{C}]/,
    // ^\p{C}  no invisible control characters and unused code points

    identifier: ($) => /[_\p{XID_Start}][-_\p{XID_Continue}]*/,
    comment: ($) =>
      seq(
        '(:',
        repeat1(choice($.comment, '(', ')', prec.right(/[^:():]|[:][^)]/))),
        token.immediate(':)')
      ),
  },
});
