test/corpus/constructors.txt
==================
3.9.1 Direct Element with plain text
==================

 <title>Harold and the Purple Crayon</title>

-------------------

(module
  (main_module
    (query_body
      (rel_path_expr
        (direct_constructor
          (direct_element
            (start_tag
              (identifier))
            (char_data)
            (end_tag
              (identifier))))))))

==================
3.9.1 Direct Element with char reference
==================

 <div>&#8364;99.50</div>

-------------------

(module
  (main_module
    (query_body
      (rel_path_expr
        (direct_constructor
          (direct_element
            (start_tag
              (identifier
                (identifier)))
            (char_ref)
            (char_data)
            (end_tag
              (identifier
                (identifier)))))))))

==================
3.9.1 Direct Element with entities
==================

 <title>Ben &amp; Jerry&apos;s  </title>

-------------------

(module
  (main_module
    (query_body
      (rel_path_expr
        (direct_constructor
          (direct_element
            (start_tag
              (identifier))
            (char_data)
            (predefined_entity_ref)
            (char_data)
            (predefined_entity_ref)
            (char_data)
            (end_tag
              (identifier))))))))

==================
3.9.1 Direct Element with enclosed expression
==================

 <title>Harold and the { $item }</title>

-------------------

(module
  (main_module
    (query_body
      (rel_path_expr
        (direct_constructor
          (direct_element
            (start_tag
              (identifier))
            (char_data)
            (enclosed_expr
              (rel_path_expr
                (var_ref
                  (identifier
                    (identifier)))))
            (end_tag
              (identifier))))))))

==================
3.9.1 Direct Element with embeded element
==================

 <response>
    <title>Hello Word</title>
  </response>

-------------------

(module
  (main_module
    (query_body
      (rel_path_expr
        (direct_constructor
          (direct_element
            (start_tag
              (identifier))
            (char_data)
            (direct_constructor
              (direct_element
                (start_tag
                  (identifier))
                (char_data)
                (end_tag
                  (identifier))))
            (char_data)
            (end_tag
              (identifier))))))))

==================
3.9.1 Direct Element with whitespace and newlines preserved
==================

<a>
  line one
  line two
</a>

-------------------

(module
  (main_module
    (query_body
      (rel_path_expr
        (direct_constructor
          (direct_element
            (start_tag
              (identifier))
            (char_data)
            (end_tag
              (identifier))))))))

==================
3.9.1 Direct Element content that looks like a comment is not a comment
==================

<a>foo (: not a comment :) bar</a>

-------------------

(module
  (main_module
    (query_body
      (rel_path_expr
        (direct_constructor
          (direct_element
            (start_tag
              (identifier))
            (char_data)
            (end_tag
              (identifier))))))))

==================
3.9.1 Direct Element with escaped braces
==================

<a>{{ not-an-expr }}</a>

-------------------

(module
  (main_module
    (query_body
      (rel_path_expr
        (direct_constructor
          (direct_element
            (start_tag
              (identifier))
            (escape_enclosed)
            (char_data)
            (escape_enclosed)
            (end_tag
              (identifier))))))))

==================
3.9.1 Direct Element with processing instruction
==================

<a><?target some pi content?></a>

-------------------

(module
  (main_module
    (query_body
      (rel_path_expr
        (direct_constructor
          (direct_element
            (start_tag
              (identifier))
            (direct_constructor
              (direct_pi
                (identifier
                  (identifier))
                (pi_content)))
            (end_tag
              (identifier))))))))

==================
3.9.1 Direct Element deeply nested
==================

<a><b><c>deep</c></b></a>

-------------------

(module
  (main_module
    (query_body
      (rel_path_expr
        (direct_constructor
          (direct_element
            (start_tag
              (identifier))
            (direct_constructor
              (direct_element
                (start_tag
                  (identifier))
                (direct_constructor
                  (direct_element
                    (start_tag
                      (identifier))
                    (char_data)
                    (end_tag
                      (identifier))))
                (end_tag
                  (identifier))))
            (end_tag
              (identifier))))))))

==================
3.9.2 Direct Comment Constructor
==================

<a><!-- a comment --></a>

-------------------

(module
  (main_module
    (query_body
      (rel_path_expr
        (direct_constructor
          (direct_element
            (start_tag
              (identifier))
            (direct_constructor
              (direct_comment
                (comment_content)))
            (end_tag
              (identifier))))))))

==================
3.9.2 Direct Comment Constructor with a lone dash
==================

<a><!-- a-b --></a>

-------------------

(module
  (main_module
    (query_body
      (rel_path_expr
        (direct_constructor
          (direct_element
            (start_tag
              (identifier))
            (direct_constructor
              (direct_comment
                (comment_content)))
            (end_tag
              (identifier))))))))

==================
3.9.3.1 Computed Element Constructors
==================

element book {
   element { 'page' } { 'dummy' }
}

---

(module
  (main_module
    (query_body
      (rel_path_expr
        (comp_elem_constructor
          (identifier)
          (enclosed_expr
            (rel_path_expr
              (comp_elem_constructor
                (rel_path_expr
                  (string_literal
                    (char_data)))
                (enclosed_expr
                  (rel_path_expr
                    (string_literal
                      (char_data))))))))))))

==================
3.9.3.2 Computed Attribute Constructors
==================

attribute size {4 + 3}

---

(module
  (main_module
    (query_body
      (rel_path_expr
        (comp_attr_constructor
          (identifier)
          (enclosed_expr
            (additive_expr
              (rel_path_expr
                (integer_literal))
              (rel_path_expr
                (integer_literal)))))))))

==================
3.9.3.3 Document Node Constructors
==================

document {  } 

---

(module
  (main_module
    (query_body
      (rel_path_expr
        (comp_doc_constructor
          (enclosed_expr))))))

==================
3.9.3.4 Text Node Constructors
==================

text { 'hello' } 

---

(module
  (main_module
    (query_body
      (rel_path_expr
        (comp_text_constructor
          (enclosed_expr
            (rel_path_expr
              (string_literal
                (char_data)))))))))

==================
3.9.3.6 Computed Comment Constructors
==================

comment { } 

---

(module
  (main_module
    (query_body
      (rel_path_expr
        (comp_comment_constructor
          (enclosed_expr))))))

==================
3.10 String Constructor with interpolation and trailing text
==================

``[`{$s}` fish]``

---

(module
  (main_module
    (query_body
      (rel_path_expr
        (string_constructor
          (interpolation
            (rel_path_expr
              (var_ref
                (identifier))))
          (string_constructor_chars))))))

==================
3.10 String Constructor empty
==================

``[]``

---

(module
  (main_module
    (query_body
      (rel_path_expr
        (string_constructor)))))

==================
3.10 String Constructor with standalone bracket and backtick that are not terminators
==================

``[a] b` c]``

---

(module
  (main_module
    (query_body
      (rel_path_expr
        (string_constructor
          (string_constructor_chars))))))

==================
3.10 String Constructor with nested string constructor inside interpolation
==================

``[outer `{ if (true()) then ``[inner]`` else "" }` end]``

---

(module
  (main_module
    (query_body
      (rel_path_expr
        (string_constructor
          (string_constructor_chars)
          (interpolation
            (if_expr
              (rel_path_expr
                (function_call
                  (identifier)
                  (arg_list)))
              (rel_path_expr
                (string_constructor
                  (string_constructor_chars)))
              (rel_path_expr
                (string_literal))))
          (string_constructor_chars))))))

==================
3.10 String Constructor spanning multiple lines
==================

``[line one
line two]``

---

(module
  (main_module
    (query_body
      (rel_path_expr
        (string_constructor
          (string_constructor_chars))))))

==================
3.11.1.1 Map Constructors
==================

map { 
'key1' : 'value1',
'key2' : 'value2'
} 

---

(module
  (main_module
    (query_body
      (rel_path_expr
        (map_constructor
          (map_entry
            (rel_path_expr
              (string_literal
                (char_data)))
            (rel_path_expr
              (string_literal
                (char_data))))
          (map_entry
            (rel_path_expr
              (string_literal
                (char_data)))
            (rel_path_expr
              (string_literal
                (char_data)))))))))

==================
3.11.2.1 Curly Array Constructor
==================

array { 'one', 'two' } 

---

(module
  (main_module
    (query_body
      (rel_path_expr
        (curly_array_constructor
          (enclosed_expr
            (rel_path_expr
              (string_literal
                (char_data)))
            (rel_path_expr
              (string_literal
                (char_data)))))))))

==================
3.11.2.1 Square Array Constructor
==================

[ 'one', 'two' ] 

---

(module
  (main_module
    (query_body
      (rel_path_expr
        (square_array_constructor
          (rel_path_expr
            (string_literal
              (char_data)))
          (rel_path_expr
            (string_literal
              (char_data))))))))

==================
3.11.2.2 TODO! should resolve to Function call - Array Lookup using Function Call Syntax
==================

[ 'one', 'two' ](2) 

---

(module
  (main_module
    (query_body
      (rel_path_expr
        (square_array_constructor
          (rel_path_expr
            (string_literal
              (char_data)))
          (rel_path_expr
            (string_literal
              (char_data))))
        (arg_list
          (rel_path_expr
            (integer_literal)))))))

==================
3.11.3.1 TODO! Unary Lookup with predicate
==================

$mp[?name='Mike'] 

---

(module
  (main_module
    (query_body
      (rel_path_expr
        (var_ref
          (identifier))
        (predicate
          (comparison_expr
            (rel_path_expr
              (unary_lookup
                (identifier)))
            (rel_path_expr
              (string_literal
                (char_data)))))))))

==================
3.11.3.1 Unary Lookup with bang
==================

 $maps ! ?name='Mike'

---

(module
  (main_module
    (query_body
      (bang_expr
        (rel_path_expr
          (var_ref
            (identifier)))
        (comparison_expr
          (rel_path_expr
            (unary_lookup
              (identifier)))
          (rel_path_expr
            (string_literal
              (char_data))))))))

==================
3.11.3.2 Postfix Lookup with array unary lookup: TODO? should be postfix_expr
==================

[ 'one', 'two' ]?2

---

(module
  (main_module
    (query_body
      (rel_path_expr
        (square_array_constructor
          (rel_path_expr
            (string_literal
              (char_data)))
          (rel_path_expr
            (string_literal
              (char_data))))
        (postfix_lookup
          (integer_literal))))))
