test/corpus/expressions_on_sequence_types.txt
==================
3.18.1 Instance Of:
==================

5 instance of xs:integer

---

(module
  (main_module
    (query_body
      (instance_of_expr
        (rel_path_expr
          (integer_literal))
        (sequence_type
          (atomic_or_union_type
            (identifier)
            (identifier)))))))

==================
3.18.2 Typeswitch:  TODO should have have case clause
==================

typeswitch ( $node )
 case text() return $node
 case element() return $node
 default return "unknown"

---

(module
  (main_module
    (query_body
      (typeswitch_expr
        (rel_path_expr
          (var_ref
            (identifier
              (identifier))))
        (typeswitch_case_clause
          (sequence_type
            (text_test))
          (rel_path_expr
            (var_ref
              (identifier
                (identifier)))))
        (typeswitch_case_clause
          (sequence_type
            (element_test))
          (rel_path_expr
            (var_ref
              (identifier
                (identifier)))))
        (rel_path_expr
          (string_literal
            (char_data)))))))

==================
3.18.3 Cast
==================

$x cast as xs:integer

---

(module
  (main_module
    (query_body
      (cast_expr
        (rel_path_expr
          (var_ref
            (identifier)))
        (identifier)
        (identifier)))))

==================
3.18.4 Castable
==================

$x castable as xs:integer

---

(module
  (main_module
    (query_body
      (castable_expr
        (rel_path_expr
          (var_ref
            (identifier)))
        (identifier)
        (identifier)))))

==================
3.18.5 Constructor Functions
==================

xs:date("2000")

---

(module
  (main_module
    (query_body
      (rel_path_expr
        (function_call
          (identifier)
          (identifier)
          (arg_list
            (rel_path_expr
              (string_literal
                (char_data)))))))))

==================
3.18.6 Treat
==================

$myaddress treat as element(*)

---

(module
  (main_module
    (query_body
      (treat_expr
        (rel_path_expr
          (var_ref
            (identifier)))
        (sequence_type
          (element_test
            (element_test_params
              (wildcard))))))))
