test/corpus/flwor.txt
==================
3.12.1 Variable Bindings single bind
==================

let $x := 47
return ()

---

(module
  (main_module
    (query_body
      (flwor_expr
        (let_clause
          (let_binding
            (identifier)
            (rel_path_expr
              (integer_literal))))
        (return_clause
          (rel_path_expr
            (parenthesized_expr)))))))

==================
3.12.1 Variable  multiple binds
==================

let $x := 47, $y := f($x)
return ()

---

(module
  (main_module
    (query_body
      (flwor_expr
        (let_clause
          (let_binding
            (identifier)
            (rel_path_expr
              (integer_literal)))
          (let_binding
            (identifier)
            (rel_path_expr
              (function_call
                (identifier)
                (arg_list
                  (rel_path_expr
                    (var_ref
                      (identifier))))))))
        (return_clause
          (rel_path_expr
            (parenthesized_expr)))))))

==================
3.12.1 Variable Bindings accompanied by a type declaration
==================

let $salary as xs:decimal :=  "cat"
return  $salary 

---

(module
  (main_module
    (query_body
      (flwor_expr
        (let_clause
          (let_binding
            (identifier)
            (type_declaration
              (sequence_type
                (atomic_or_union_type
                  (identifier)
                  (identifier))))
            (rel_path_expr
              (string_literal
                (char_data)))))
        (return_clause
          (rel_path_expr
            (var_ref
              (identifier))))))))

==================
3.12.2 For Clause
==================

for $x in $expr1
return  $x 

---

(module
  (main_module
    (query_body
      (flwor_expr
        (for_clause
          (for_binding
            (identifier)
            (rel_path_expr
              (var_ref
                (identifier)))))
        (return_clause
          (rel_path_expr
            (var_ref
              (identifier))))))))

==================
3.12.5 Where Clause
==================

for $x at $i in $inputvalues
where $i mod 100 = 0
return $x 

---

(module
  (main_module
    (query_body
      (flwor_expr
        (for_clause
          (for_binding
            (identifier)
            (variable
              (identifier))
            (rel_path_expr
              (var_ref
                (identifier)))))
        (where_clause
          (multiplicative_expr
            (rel_path_expr
              (var_ref
                (identifier)))
            (comparison_expr
              (rel_path_expr
                (integer_literal))
              (rel_path_expr
                (integer_literal)))))
        (return_clause
          (rel_path_expr
            (var_ref
              (identifier))))))))

==================
3.12.6 Count Clause
==================

for $p in $products
order by $p/sales descending
count $rank
where $rank <= 3
return
()

---

(module
  (main_module
    (query_body
      (flwor_expr
        (for_clause
          (for_binding
            (identifier)
            (rel_path_expr
              (var_ref
                (identifier)))))
        (order_by_clause
          (rel_path_expr
            (var_ref
              (identifier))
            (abbrev_forward_step
              (name_test
                (identifier))))
          (order_direction))
        (count_clause
          (variable
            (identifier)))
        (where_clause
          (comparison_expr
            (rel_path_expr
              (var_ref
                (identifier)))
            (rel_path_expr
              (integer_literal))))
        (return_clause
          (rel_path_expr
            (parenthesized_expr)))))))

==================
3.12.7 Group By Clause TODO more examples
==================
let $g2 := $expr1
let $g3 := $expr2
group by $g1, $g2, $g3 collation "Spanish"
return $g1

---

(module
  (main_module
    (query_body
      (flwor_expr
        (let_clause
          (let_binding
            (identifier)
            (rel_path_expr
              (var_ref
                (identifier)))))
        (let_clause
          (let_binding
            (identifier)
            (rel_path_expr
              (var_ref
                (identifier)))))
        (group_by_clause
          (grouping_spec
            (variable
              (identifier)))
          (grouping_spec
            (variable
              (identifier)))
          (grouping_spec
            (variable
              (identifier))
            (string_literal
              (char_data))))
        (return_clause
          (rel_path_expr
            (var_ref
              (identifier))))))))

==================
3.12.8 Order By Clause
==================

for $e in $employees
order by $e/salary descending
return $e/name

---

(module
  (main_module
    (query_body
      (flwor_expr
        (for_clause
          (for_binding
            (identifier)
            (rel_path_expr
              (var_ref
                (identifier)))))
        (order_by_clause
          (rel_path_expr
            (var_ref
              (identifier))
            (abbrev_forward_step
              (name_test
                (identifier))))
          (order_direction))
        (return_clause
          (rel_path_expr
            (var_ref
              (identifier))
            (abbrev_forward_step
              (name_test
                (identifier)))))))))
